syntax = "proto3";

package protocols;

option go_package = "github.com/oscal-compass/compliance-to-policy-go/v2/api/proto/";

import "models.proto";

// PVP policy request
message PolicyRequest {
  repeated protocols.Rule rule = 1;
}

// generate PVP policy response
message GenerateResponse {}

// get PVP results response
message ResultsResponse {
  protocols.PVPResult result = 1;
}

message ConfigureRequest {
  map<string, string> settings = 1;
}

message ConfigureResponse {}

// get policy results from PVP
service PolicyEngine {
  rpc Generate(PolicyRequest) returns (GenerateResponse);
  rpc GetResults(PolicyRequest) returns (ResultsResponse);
  rpc Configure(ConfigureRequest) returns (ConfigureResponse);
}
